fix toggle button, event sign-up form vertical alignment

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -30,27 +30,31 @@ h1,h2,h3,h4,h5,h6{
 .navbar, .btn, .well, .alert{
  border-radius: 0;
 }
+
 .navbar{
  border:0;
 }
+
 .navbar-inverse .navbar-toggle{
  border: solid 2px white;
  border-radius:0;
+ padding: 8px 10px;
 }
+
 .navbar-brand{
  padding-left:0;
  img{
+  max-height: 50px;
+  margin-right: 10px;
   margin-top:-15px;
  }
 }
-.btn{
- border-radius:0;
+
+.page-header{
+ margin-top:0;
 }
 
-.logo{
- max-height: 50px;
- margin-right: 10px;
-}
+
 
 .form-page-container{
  padding: 15px;
@@ -64,9 +68,12 @@ h1,h2,h3,h4,h5,h6{
  color:#fff;
 }
 
-.page-header{
- margin-top:0;
+.required{
+ white-space: nowrap;
+ color:red;
 }
+
+
 
 ul.event-list, ul.user-list{
  list-style: none;
